# cmake-sed

./: .gitignore  CMakeLists.txt  main.cpp  private.pem
